test/tests/compiler/8_loops/valid/extra_credit/switch_default_not_last.plx
pub fn main(none) i32 {
    a: i32;
    b: i32 = a = 7
    match a + b {
        otherwise {
            return 0
        }
        -> 2 {
            return 1
        }
    }

}
