test/tests/compiler/8_loops/invalid_parse/extra_credit/plx1_match_with_op.plx
pub fn main(none) i32 {
    match 3 {
        -> 1 + 2 {
            return 0
        }
    }
}
